k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  type: ClusterIP
  selector:
    app: nestjs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
